modules/vpc/main.tf
resource "aws_vpc" "this" {
   cidr_block = var.vpc_cidr

   tags = {
     Name = "VPC"
   }
}   

resource "aws_subnet" "this" {
    vpc_id = aws_vpc.this.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true

    tags = {
      Name = "public subnet"
    }
  
}

resource "aws_route_table" "this" {
    vpc_id = aws_vpc.this.id
  
}

resource "aws_route" "this" {
    route_table_id = aws_route_table.this.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  
}

resource "aws_route_table_association" "this" {
    subnet_id = aws_subnet.this.id
    route_table_id = aws_route_table.this.id
  
}

resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id
  
}
